<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="encomplus.com.ala_in_one_ravi.Registation">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:id="@+id/ly2"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/name"
                android:hint="@string/name"
                android:textColorHint="#0b0b0b"
                android:textColor="#131212"
                android:padding="15dp"
                android:background="@drawable/dw"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/email"
                android:hint="@string/guranter"
                android:textColorHint="#0b0b0b"
                android:textColor="#131212"
                android:padding="15dp"
                android:background="@drawable/dw" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/mobieno"
                android:hint="@string/m_no1"
                android:textColorHint="#0b0b0b"
                android:inputType="number"
                android:textColor="#131212"
                android:padding="15dp"
                android:background="@drawable/dw"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/address"
                android:inputType="textMultiLine"
                android:hint="@string/address"
                android:textColorHint="#0b0b0b"
                android:textColor="#131212"
                android:padding="15dp"
                android:background="@drawable/dw" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="60dp"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dw"
                    android:textSize="18dp"
                    android:onClick="submit"
                    android:padding="15dp"
                    android:text="@string/submit"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
