<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="encomplus.com.ala_in_one_ravi.LoginScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardBackgroundColor="#a5cee2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/user_email"
                    android:id="@+id/user_email"
                    android:gravity="center"
                    android:background="@drawable/dw"
                    android:padding="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/password"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:background="@drawable/dw"
                    android:padding="10dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="4dp"
                    android:text="@string/show_password"
                    android:id="@+id/show_password"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:weightSum="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".45"
                        android:padding="10dp"
                        android:background="@drawable/dw"
                        android:text="@string/login"
                        android:id="@+id/login"/>
                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".45"
                        android:padding="10dp"
                        android:text="@string/singup"
                        android:background="@drawable/dw"
                        android:id="@+id/singup"/>

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
